--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,6 +1,10 @@
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@import url('https://fonts.googleapis.com/css2?family=Long+Cang&family=Permanent+Marker&display=swap');
+
 
 .translate-z-0 {
   transform: translateZ(0px);
