--- a/styles/globals.css
+++ b/styles/globals.css
@@ -64,3 +64,47 @@ button:focus, a:focus, Link:focus {
   }
 
 }
+
+/* Swiper styles */
+
+
+.swiper {
+  width: 100%;
+  height: 100%;
+}
+
+.swiper-slide {
+  text-align: center;
+  font-size: 18px;
+  background: #272525;
+
+  /* Center slide text vertically */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.swiper-slide img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.swiper-pagination {
+  position: absolute;
+  top: 50%;
+  left: 2px;
+  transform: translateY(-50%);
+}
+
+.swiper-pagination-bullet {
+  color: #000000;
+  opacity: 1;
+  background-color: rgb(201, 19, 19);
+}
+
+.swiper-pagination-bullet-active {
+  color: #fff;
+  background: #ff0062;
+}
