--- a/styles/globals.css
+++ b/styles/globals.css
@@ -34,10 +34,10 @@ button:focus, a:focus, Link:focus {
 
 @layer base {
   body {
-    @apply overflow-hidden leading-relaxed;
+    @apply leading-relaxed;
   }
   .page {
-    @apply w-full h-screen overflow-hidden;
+    @apply w-full h-screen ;
   }
   .h1 {
     @apply text-[35px] leading-tight md:text-[60px] md:leading-[1.3] mb-8 font-semibold;
