--- a/styles/globals.css
+++ b/styles/globals.css
@@ -37,7 +37,7 @@ button:focus, a:focus, Link:focus {
     @apply leading-relaxed;
   }
   .page {
-    @apply overflow-hidden w-full h-screen ;
+    @apply w-screen h-screen ;
   }
   .h1 {
     @apply text-[35px] leading-tight md:text-[60px] md:leading-[1.3] mb-8 font-semibold;
